ts/test/corpus/structs.txt
==================
empty struct dec
==================

struct Empty = {}

---

(source_file
  (struct_declaration
    (identifier)))

	
==================
simple struct dec
==================

struct Person = {
	str name,
	int age,
}

---

(source_file
  (struct_declaration
    (identifier)
    (struct_field
      (type)
      (identifier))
    (struct_field
      (type)
      (identifier))))

	
==================
struct var declaration
==================

Person jog = {
	name: "jogua",
	age: 82,
}

---

(source_file
  (variable_declaration
    (type
      (identifier))
    (identifier)
    (map_literal
      (map_entry
        (identifier)
        (string_literal))
      (map_entry
        (identifier)
        (number_literal)))))
